src/content/docs/identityserver/v5/overview/specs.md
---
title: "Supported Specifications"
date: 2020-09-10T08:22:12+02:00
weight: 30
---

Duende IdentityServer implements the following specifications:

### OpenID Connect

* OpenID Connect Core 1.0 ([spec](https://openid.net/specs/openid-connect-core-1_0.html))
* OpenID Connect Discovery 1.0 ([spec](https://openid.net/specs/openid-connect-discovery-1_0.html))
* OpenID Connect RP-Initiated Logout 1.0 - draft 01 ([spec](https://openid.net/specs/openid-connect-rpinitiated-1_0.html))
* OpenID Connect Session Management 1.0 - draft 30 ([spec](https://openid.net/specs/openid-connect-session-1_0.html))
* OpenID Connect Front-Channel Logout 1.0 - draft 04 ([spec](https://openid.net/specs/openid-connect-frontchannel-1_0.html))
* OpenID Connect Back-Channel Logout 1.0 - draft 06 ([spec](https://openid.net/specs/openid-connect-backchannel-1_0.html))
* Multiple Response Types ([spec](https://openid.net/specs/oauth-v2-multiple-response-types-1_0.html))
* Form Post Response Mode ([spec](https://openid.net/specs/oauth-v2-form-post-response-mode-1_0.html))


### OAuth 2.x

* OAuth 2.0 ([RFC 6749](https://tools.ietf.org/html/rfc6749))
* OAuth 2.0 Bearer Token Usage ([RFC 6750](https://tools.ietf.org/html/rfc6750))
* JSON Web Token ([RFC 7519](https://tools.ietf.org/html/rfc7519))
* OAuth 2.0 Token Revocation ([RFC 7009](https://tools.ietf.org/html/rfc7009))
* OAuth 2.0 Token Introspection ([RFC 7662](https://tools.ietf.org/html/rfc7662))
* Proof Key for Code Exchange ([RFC 7636](https://tools.ietf.org/html/rfc7636))
* JSON Web Tokens for Client Authentication ([RFC 7523](https://tools.ietf.org/html/rfc7523))
* OAuth 2.0 Device Authorization Grant ([RFC 8628](https://tools.ietf.org/html/rfc8628))
* Proof-of-Possession Key Semantics for JSON Web Tokens ([RFC 7800](https://tools.ietf.org/html/rfc7800))
* OAuth 2.0 Mutual TLS Client Authentication and Certificate-Bound Access Tokens ([RFC 8705](https://tools.ietf.org/html/rfc8705))
* OAuth 2.0 Token Exchange ([RFC 8693](https://tools.ietf.org/html/rfc8693))
* Resource Indicators for OAuth 2.0 ([RFC 8707](https://tools.ietf.org/html/rfc8707))
* JWT Secured Authorization Request ([draft](https://tools.ietf.org/html/draft-ietf-oauth-jwsreq))
* JWT Profile for OAuth 2.0 Access Tokens ([RFC 9068](https://datatracker.ietf.org/doc/rfc9068/))
* OAuth 2.0 Authorization Server Issuer Identifier in Authorization Response ([RFC 9207](https://datatracker.ietf.org/doc/rfc9207/))